--- a/signin.css
+++ b/signin.css
@@ -195,7 +195,7 @@ h3:after{
 
 #alt a {
     text-decoration: none;
-    font-weight: 400;
+    font-weight: bold;
     color:#782c00;
     padding: 5px;
 }
