--- a/dashboard.css
+++ b/dashboard.css
@@ -6,18 +6,19 @@
 
 body{
     width: 100%;
+    max-height: 100vh;
     height: 100vh;
-    font-family: 'Baskervville',sans-serif;
+    font-family:
+'Baskervville',sans-serif;
     font-size: 18px;
-    overflow: hidden;
     position: relative;
+    overflow-y:hidden ;
 }
 
 .container{
     width:100%;
     height:100%;
     display:flex;
-    overflow: hidden;
 }
 
 .left{
@@ -31,8 +32,9 @@ body{
 
 .right{
     width:55%;   
-    overflow-x: hidden; 
-    height: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    position: relative; 
 }
 
 /* logo section */
@@ -72,8 +74,7 @@ body{
     position: absolute;
     margin-left: 20px;
     margin-top: 100px;
-    overflow-y: hidden;
-   }
+}
 
 .nav-links ul li{
     margin-bottom: 50px;
@@ -115,7 +116,8 @@ body{
 .option{
     background-color: #f4f4f4;
     width:90%;
-    height: 50%;
+    height: 70%;
+    max-height: 430px;
     padding: 20px;
     padding-bottom: 40px;
     border-radius: 3px;
@@ -189,19 +191,26 @@ a{
 /*footer section*/
 
 .footer{
-    width: 100%;
-    margin: ;
-    height: 40px;
+    height: 60px;
     background-color:#E4D5CC;
-    bottom: 0px;
+    bottom: 0;
+    margin-bottom: 0;
+    padding-top: 10px;
+    right: 0;
     position: absolute;
-    font-size: 10px;
+    font-size: 12px;
     padding-top: 3px;
     display: flex;
     justify-content: space-around;
+    width: 55%;
 }
 
-
+.copyright{
+    font-size: 10px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
 
 
 
@@ -229,14 +238,14 @@ a{
     .left{
         width:15%;
     }
-    .right{
+    .footer, .right{
         width: 85%;
     }
     .nav-links{
         margin-left:5%;
     }
     .footer{
-        font-size: 18px;
+        font-size: 15px;
     }
 }
 
@@ -244,7 +253,7 @@ a{
     .left{
         width:30%;
     }
-    .right{
+    .footer, .right{
         width: 70%;
     }
     .nav-links{
@@ -266,6 +275,10 @@ a{
    .img{
        height: auto;
    }
+   .footer{
+       line-height: 10px;
+       padding-top: 5px;
+   }
 }
 
 
@@ -284,8 +297,16 @@ a{
         'd'
         'e'
         'f';
+        grid-row-gap: 10px;
     }
     .option{
         height: 100%;
-    }
+        padding-top: 10px;
+     }
+     #f{
+         margin-bottom: 60px;
+     }
+     .img{
+         height: 60px;
+         }
 }
