--- a/forget.css
+++ b/forget.css
@@ -100,12 +100,26 @@ body{
 
 /* footer section */
 footer{
-    width:100%;
-    height:60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
     background-color: #E4D5CC;
-    bottom:0px;
-    padding: 0px 15px;
-    margin-top: 30px;
+}
+.footer{
+    display: flex;
+    padding:0px 10px ;
+    justify-content: space-around;
+    margin-top: 10px;
+    align-items: center;
+}
+
+.copyright{
+    font-size: 10px;
+    margin-right: 0px;
 }
 
 .footer ul{
@@ -113,7 +127,6 @@ footer{
     justify-content: space-between;
     list-style: none;
     line-height: 15px;
-    margin-top: 10px;
     width: 100%;
 }
 
@@ -137,7 +150,7 @@ h2{
     width: 60%;
     height:100vh;
     margin:auto;
-    position: relative;
+   /* position: relative;*/
     margin-bottom: 100px;
 }
 
