--- a/landingpg.css
+++ b/landingpg.css
@@ -60,14 +60,14 @@ body{
     background-color:#782c00;
     color: white;
     border-radius: 3px;
-    padding: 0px 5px;
+    padding: 10px;
     font-weight: bold;
 }
 
 #Si{
     border-radius: 3px;
     border:2px solid #782c00;
-    padding: 0px 5px;
+    padding: 10px;
     font-weight: bold;
 }
 
@@ -220,8 +220,9 @@ span h3{
 }
 
 .button{
+    text-align: center;
     border-style: none;
-    margin-top: 30px;
+    margin-top: 40px;
     padding:10px 25px;
     font-family: 'Baskervville',sans-serif;
     background-color: #782c00;
@@ -229,7 +230,10 @@ span h3{
     border-radius:3px ;
     text-decoration: none;
 }
-.button:hover{cursor: pointer;}
+.button:hover{
+    cursor: pointer;
+    color: #b44c10
+}
 
 #button{
     padding:5px;
