--- a/landingpg.css
+++ b/landingpg.css
@@ -25,7 +25,7 @@ body{
     width:100%;
     height:50px;
     position: relative;
-    top:0px;
+/*     top:0px; */
     margin-top; 20px;
     margin-bottom: 100px;
 }
@@ -34,6 +34,7 @@ body{
     width:50%;
     height:100%;
     display:flex;
+    margin-left: 10px;
 }
 
 .logo p{
@@ -61,14 +62,14 @@ body{
     background-color:#782c00;
     color: white;
     border-radius: 3px;
-    padding: 16px;
+    padding: 8px 10px;
     font-weight: bold;
 }
 
 #Si{
     border-radius: 3px;
     border:2px solid #782c00;
-    padding:10px 18px;
+    padding: 8px 10px;
     font-weight: bold;
 }
 
