--- a/landingpg.css
+++ b/landingpg.css
@@ -61,7 +61,7 @@ body{
 #Su{
 /*     background-color:#782c00; */
     border:2px solid #782c00;
-    color: white;
+    color: black;
     border-radius: 3px;
     padding: 8px 16px;
     font-weight: bold;
