--- a/landingpg.css
+++ b/landingpg.css
@@ -59,8 +59,7 @@ body{
 }
 
 #Su{
-/*     background-color:#782c00; */
-    border:2px solid #782c00;
+    background-color:#782c00;
     color: black;
     border-radius: 3px;
     padding: 8px 16px;
@@ -72,18 +71,6 @@ body{
     border:2px solid #782c00;
     padding: 8px 16px;
     font-weight: bold;
-}
-#Si:hover{
-    cursor: pointer;
-    background-color: #b64c0e;
-    color: #fff;
-    border: none;
-}
-#Su:hover{
-    cursor: pointer;
-    background-color: #b64c0e;
-    color: #fff;
-    border: none;
 }
     
 
