--- a/landingpg.css
+++ b/landingpg.css
@@ -15,7 +15,7 @@ body{
 .container {
     width: 100%;
     height: 100vh;
-     margin-top; 30px;
+     margin-top; 40px;
     overflow-x: hidden;
 }
 
@@ -60,16 +60,16 @@ body{
 
 #Su{
     background-color:#782c00;
-    color: black;
+    color: white;
     border-radius: 3px;
-    padding: 8px 16px;
+    padding: 5px 16px;
     font-weight: bold;
 }
 
 #Si{
     border-radius: 3px;
     border:2px solid #782c00;
-    padding: 8px 16px;
+    padding: 5px 16px;
     font-weight: bold;
 }
     
@@ -226,7 +226,6 @@ span h3{
 }
 
 .button{
-    text-align: center;
     border-style: none;
     margin-top: 40px;
     padding:10px 25px;
