--- a/landingpg.css
+++ b/landingpg.css
@@ -129,10 +129,9 @@ body{
     box-shadow: 1px 3px 5px rgba(0,0,0,0.4);
     position:relative;
 }
-.fstCont h2{font-size: 30px;}
-.fstCont p{
-    margin: 20px auto;
-    margin-bottom: 15px;
+.fstCont > h2{font-size: 30px;}
+.fstCont > p{
+    margin: 20px 0;
 }
 .fstCont button{
     padding: 10px 25px;
@@ -214,6 +213,7 @@ body{
 .jsoninfo, .csvinfo{
     background-color:#e4d5cc;
     width: 50%;
+    padding: 30px;
     overflow: hidden;
     padding-bottom: 20px;
 }
@@ -242,8 +242,9 @@ span h3{
 }
 
 #button{
-    padding:5px;
-    background: #f4f4f4;
+    padding: 16px;
+    background-color: #f4f4f4;
+     border-radius:3px ;
     color:black;
 }
 
