--- a/landingpg.css
+++ b/landingpg.css
@@ -213,15 +213,16 @@ body{
 .jsoninfo, .csvinfo{
     background-color:#e4d5cc;
     width: 50%;
-    padding: 30px;
+    padding: 40px;
     overflow: hidden;
     padding-bottom: 20px;
 }
 
-.jsoninfo p, .csvinfo p {margin-bottom: 20px;}
+.jsoninfo p, .csvinfo p {margin-bottom: 30px;}
 
 span h3{
     margin-top: 100px;
+    margin-bottom: 30px;
     margin-left: 5%;
 }
 
