--- a/landingpg.css
+++ b/landingpg.css
@@ -218,12 +218,12 @@ body{
     padding-bottom: 20px;
 }
 
-.jsoninfo p, .csvinfo p {margin-bottom: 30px;}
+.jsoninfo p, .csvinfo p {padding-bottom: 30px;}
 
 span h3{
     margin-top: 100px;
-    margin-bottom: 30px;
-    margin-left: 5%;
+    padding-bottom: 30px;
+/*     margin-left: 5%; */
 }
 
 .button{
@@ -247,8 +247,8 @@ span h3{
     margin-left: 16px;
     background-color: #f4f4f4;
     border: 1px solid #ddd0d0;
-    border-radius:3px ;
-    color:black;
+    border-radius: 8px ;
+    color: black;
 }
 
 
