--- a/landingpg.css
+++ b/landingpg.css
@@ -194,7 +194,7 @@ body{
 }
 .img img{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 50px 0px;
     object-fit: fit;
 }
@@ -225,7 +225,7 @@ span h3{
     margin-left: 3%;
 }
 span > h4{
-    padding-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .button{
@@ -245,7 +245,8 @@ span > h4{
 }
 
 #button{
-    padding: 16px;
+    cursor: pointer;
+    padding: 25px;
     margin-left: 10px;
     background-color: #f4f4f4;
     border: 1px solid #ddd0d0;
