--- a/landingpg.css
+++ b/landingpg.css
@@ -9,7 +9,7 @@ body{
     height:100vh;
     font-family: 'Baskervville',sans-serif;
     font-size:18px;
-    position: relative;
+/*     position: relative; */
 }
 
 .container {
