update chunk file

--- a/file_splitter/chunky/chunk_it/templates/chunk_it/contactus.html
+++ b/file_splitter/chunky/chunk_it/templates/chunk_it/contactus.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact us</title>
-    <link rel="stylesheet" href="{% static 'contactus.css' %}">
+    <link rel="stylesheet" href="{% static 'css/contactus.css' %}">
     
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet"></head>
 <body>
     <div class="contactus">
     
     <div class="left">
-    <img src="images/bg2.png" alt="">    
+    <img src="{% static 'images/bg2.png' %}" alt="">    
     </div>
     
     <div class="right">
@@ -37,6 +37,6 @@
     </div>
     
     </div>
-    <script src="test.js"></script>
+    <script src="{% static 'js/test.js' %}"></script>
 </body>
 </html>
