--- a/file_splitter/chunky/chunk_it/templates/chunk_it/forget.html
+++ b/file_splitter/chunky/chunk_it/templates/chunk_it/forget.html
@@ -1,17 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>forgot Password</title>
-    <link rel="stylesheet" href="forget.css">
-    <link rel="shortcut icon" href="images/logo1.png" type="image/png">   
+    <link rel="stylesheet" href="{% static 'css/forget.css' %}">
+    <link rel="shortcut icon" href="{% static 'images/logo1.png' %}" type="image/png">   
     
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet"></head>
 <body>
         
     <div class="nav-bar">
         <div class="logo">
-            <img src="images/logo.svg">
+            <img src="{% static 'images/logo.svg' %}">
             <p>Chunk-It</p>
         </div>
               
@@ -19,25 +20,25 @@
    <div class="nav-links">
        
             <ul>
-                <li> <a href="">Chunk File</a></li>
+                <li> <a href="{% url 'chunk_it:chunk'  %}">Chunk File</a></li>
                 <li> <a href="">Tools</a></li>
                 <li> <a href="">How to use</a></li>
-                <li> <a href="signin.html">Login</a></li>
-                <li> <a id="Su" href="index.html">Sign Up</a></li>
+                <li> <a href="{% url 'chunk_it:login'  %}">Login</a></li>
+                <li> <a id="Su" href="{% url 'chunk_it:signup'  %}">Sign Up</a></li>
             </ul>
         </div>
     </div>
     
     <div class="hide-sidebar">
-               <img id="menu" src="images/menu.svg" onclick="sideBar ()">     
+               <img id="menu" src="{% static 'images/menu.svg' %}" onclick="sideBar ()">     
 
         <div id="sidebar" class="side-bar">
             <ul>
-                <li> <a href="">Chunk File</a></li>
+                <li> <a href="{% url 'chunk_it:chunk'  %}">Chunk File</a></li>
                 <li> <a href="">Tools</a></li>
                 <li> <a href="">How to use</a></li>
-                <li> <a href="signin.html">Login</a></li>
-<li> <a id="Su" href="index.html">Sign Up</a></li>
+                <li> <a href="{% url 'chunk_it:login'  %}">Login</a></li>
+<li> <a id="Su" href="{% url 'chunk_it:signup'  %}">Sign Up</a></li>
             </ul>
         </div>
 </div>
@@ -50,6 +51,7 @@
             </div>
             
             <div class="form">
+                {% csrf_token %}
                 <form action="#">
                     <label>Email address</label><br>
                     <input placeholder="enter your email address" type="text"><br>
@@ -60,16 +62,16 @@
         </div>
         
         <div class="info">
-           For help and support, visit our <a href="contactus.html">contact us </a> page
+           For help and support, visit our <a href="{% url 'chunk_it:contact'  %}">contact us </a> page
        </div>              
     
     <footer>
             <div class="footer">
                 <ul>
-                <li> <a href="privacy.html">Privacy Policy</a></li>
+                <li> <a href="{% url 'chunk_it:privacy'  %}">Privacy Policy</a></li>
                 <li> <a href="">API Development</a></li>
                 <li> <a href="">Terms and Services</a></li>
-                <li> <a href="contactus.html">Contact Us</a></li>
+                <li> <a href="{% url 'chunk_it:contact'  %}">Contact Us</a></li>
             </ul>
 
             </div>
@@ -80,7 +82,7 @@
         
               
             
-    <script src="index.js"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 </html>
 
