--- a/file_splitter/chunky/chunk_it/templates/chunk_it/landingpg.html
+++ b/file_splitter/chunky/chunk_it/templates/chunk_it/landingpg.html
@@ -23,7 +23,7 @@
                 <li> <a href="">Home</a></li>
                 <li> <a href="">About</a></li>
                 <li> <a href="">Services</a></li>
-                <li> <a href="">Contacts</a></li>
+                <li> <a href="{% url 'chunk_it:contact' %}">Contacts</a></li>
                 <li> <a id="Su" href="{% url 'chunk_it:signup' %}">Sign Up</a></li>
                 <li> <a id="Si" href="{% url 'chunk_it:login' %}">Login</a></li>
                 
@@ -39,7 +39,7 @@
                 <li> <a href="">Home</a></li>
                 <li> <a href="">About</a></li>
                 <li> <a href="">Services</a></li>
-                <li> <a href="">Contacts</a></li>
+                <li> <a href="{% url 'chunk_it:contact' %}">Contacts</a></li>
                 <li> <a href="{% url 'chunk_it:signup' %}">Sign Up</a></li>
                 <li> <a href="{% url 'chunk_it:login' %}">Login</a></li>
         </div>
